[package]
name = "duktape-rs"
version = "0.0.4"
authors = ["envis10n <envis10n@protonmail.com>", "Rafael Caricio <duktapers@caric.io>"]
edition = "2018"
repository = "https://gitlab.com/envis10n/duktape-rs"
readme = "README.md"
keywords = ["duktape", "dukbind", "js", "javascript"]
license = "MIT"
description = "Safe(er) rust wrapper for dukbind."

[dependencies]
dukbind = { path = "../dukbind" }
anyhow = "1.0.26"
