[package]
name = "duktape"
version = "0.1.0"
authors = ["Rafael Caricio <duktapers@caric.io>", "envis10n <envis10n@protonmail.com>"]
edition = "2018"
repository = "https://github.com/rafaelcaricio/duktape-rs"
readme = "README.md"
keywords = ["duktape", "dukbind", "js", "javascript"]
license = "MIT"
description = "Safe rust wrapper for dukbind."

[dependencies]
dukbind = { path = "../dukbind" }
anyhow = "1.0.26"
